--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -3,5 +3,8 @@
     <attr name="mainBackground" format="color"></attr>
     <attr name="titleColor" format="color"></attr>
     <attr name="commonTextColor" format="color"></attr>
-
+    <declare-styleable name="CircularImage">
+        <attr name="border_width" format="dimension" />
+        <attr name="border_color" format="color" />
+    </declare-styleable>
 </resources>
