--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@mipmap/ic_history_white"
+            android:icon="@mipmap/ic_image_book"
             android:title="图书" />
         <item
             android:id="@+id/nav_camera"
@@ -17,7 +17,7 @@
             android:title="视频" />
         <item
             android:id="@+id/nav_manage"
-            android:icon="@mipmap/ic_book_selected"
+            android:icon="@mipmap/ic_book_people"
             android:title="翻译" />
     </group>
 
@@ -25,7 +25,7 @@
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@mipmap/ic_launcher"
+                android:icon="@mipmap/ic_book_default"
                 android:title="换肤" />
             <item
                 android:id="@+id/nav_send"
