--- a/app/src/main/res/layout/fragment_music_list.xml
+++ b/app/src/main/res/layout/fragment_music_list.xml
@@ -1,82 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:clickable="true">
 
-        <android.support.v7.widget.SearchView
-            android:id="@+id/searchview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_searchview_contact"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:textColor="#757575"
-            app:iconifiedByDefault="false"
-            app:queryBackground="@null"
-            app:queryHint="请输入关键字" />
-
-
-        <me.yokeyword.indexablelistview.IndexableStickyListView
-            android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:indexBar_selected_textColor="@color/colorAccent"
-            app:indexBar_textColor="@android:color/darker_gray"
-            app:indexBar_textSize="13sp"
-            app:indexListView_rightOverlayColor="@color/colorAccent"
-            app:indexListView_type_overlay="right" />
-    </LinearLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="bottom"
-        android:background="@color/white_f"
-        android:foreground="?selectableItemBackground"
-        android:orientation="horizontal">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white_e" />
+        <com.allyn.lives.view.widgets.RefreshListView
+            android:id="@+id/lv_sort"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:divider="@null" />
 
         <TextView
-            android:id="@+id/tvMusicNmae"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tvAuthorName"
-            android:layout_marginEnd="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_toLeftOf="@+id/tvAuthorName"
-            android:layout_toStartOf="@+id/tvAuthorName" />
+            android:id="@+id/dialog"
+            android:layout_width="80.0dip"
+            android:layout_height="80.0dip"
+            android:layout_gravity="center"
+            android:background="@drawable/show_head_toast_bg"
+            android:gravity="center"
+            android:textColor="#ffffffff"
+            android:textSize="30.0dip"
+            android:visibility="invisible" />
 
-        <TextView
-            android:id="@+id/tvAuthorName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/tvCode"
-            android:layout_centerHorizontal="true" />
 
-        <TextView
-            android:id="@+id/tvCode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="47dp"
-            android:layout_marginRight="47dp" />
-    </RelativeLayout>
-</FrameLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:background="@color/white_f"
+            android:foreground="?selectableItemBackground"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/white_e" />
+
+            <TextView
+                android:id="@+id/tvMusicNmae"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/tvAuthorName"
+                android:layout_marginEnd="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_toLeftOf="@+id/tvAuthorName"
+                android:layout_toStartOf="@+id/tvAuthorName" />
+
+            <TextView
+                android:id="@+id/tvAuthorName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/tvCode"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:id="@+id/tvCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="47dp"
+                android:layout_marginRight="47dp" />
+        </RelativeLayout>
+        <com.allyn.lives.view.widgets.SlideLinerLayout
+            android:id="@+id/sidrbar"
+            android:layout_width="22.0dip"
+            android:layout_height="fill_parent"
+            android:layout_gravity="right|center"
+            android:orientation="vertical" />
+    </FrameLayout>
+
+</LinearLayout>
