--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,4 +39,7 @@
     <color name="btn_press_color_red_e2">#E28271</color>
 
     <color name="transparent2">#00000000</color>
+
+    <color name="red">#ff0000</color>
+    <color name="alpha">#00000000</color>
 </resources>
