--- a/app/src/main/res/layout/activity_music_play_activivy.xml
+++ b/app/src/main/res/layout/activity_music_play_activivy.xml
@@ -51,12 +51,12 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginRight="40dp"
                         android:layout_toEndOf="@+id/btnReturn"
                         android:layout_toLeftOf="@+id/btnMore"
                         android:layout_toRightOf="@+id/btnReturn"
                         android:singleLine="true"
-                        android:text="结束"
+                        android:text="歌名"
                         android:textColor="@color/white_f"
                         android:textSize="@dimen/font_large" />
 
@@ -215,36 +215,29 @@
                 android:layout_margin="10dp"
                 android:padding="10dp">
 
+
                 <ImageButton
                     android:id="@+id/btnCode"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="58dp"
+                    android:layout_marginStart="58dp"
+                    android:background="@mipmap/ic_code_play_list"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginStart="25dp"
-                    android:background="@mipmap/ic_code_play_list" />
-
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
                 <ImageButton
                     android:id="@+id/btnLike"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:background="@mipmap/ic_favorite_white"
+                    android:layout_marginRight="72dp"
+                    android:layout_marginEnd="72dp"
                     android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:background="@mipmap/ic_favorite_white" />
-
-                <ImageButton
-                    android:id="@+id/btnDeleteMusic"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginEnd="25dp"
-                    android:layout_marginRight="25dp"
-                    android:background="@mipmap/ic_delete" />
+                    android:layout_alignParentEnd="true" />
+
             </RelativeLayout>
 
             <TextView
@@ -254,7 +247,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
-                android:text="邱忠林"
+                android:text="allyn"
                 android:textColor="@color/white_f" />
 
             <TextView
